webfs refactor (wip)
